# django-time-for-a-boolean

./: .gitignore  .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: release.yml  test-pypi.yml  test.yml
example_project/core/: settings.py
example_project/example/: models.py
example_project/example/migrations/: 0001_initial.py
src/django_time_for_a_boolean/: __init__.py  fields.py
tests/: models.py  settings.py  test_fields.py
